nii - fixed overflow wierdness when adding a new bill by overriding fancybox css

--- a/www/scss/bill_checklist.scss
+++ b/www/scss/bill_checklist.scss
@@ -11,6 +11,10 @@
     top: -15px;
 }
 
+.fancybox-lock{
+  overflow: inherit !important;
+}
+
 html{
   height:100%;
   body{
